# phoronixDataSet

./: .gitattributes  .gitignore  README.md  excluded.txt  notstarted.txt  remining  stats  svt-av1  ubuntu_installer.yml
inputs/: aio-stress.txt  postmark.pmrc
measurements/meltdown/: time.txt
need/scripts/: botan
results/: energy.txt  energy_log.txt  energy_raw.txt  gcc_current.txt  gcc_time.txt  generateHeatMaps.ipynb  mergeResults.sh  notes  pending  percentageDiffCalculator.sh  time_aio-stress.txt  time_aircrack-ng.txt  time_aircrack.txt  time_aobench.txt  time_apache.txt  time_bzip2.txt  time_crafty.txt  time_log.txt  time_p7zip.txt  time_raw.txt  time_stockfish.txt  time_tscp.txt  time_xz.txt  time_zstd.txt  tlbs_percentage_difference.txt  tlbs_raw.txt
results/.ipynb_checkpoints/: generateHeatMaps-checkpoint.ipynb
results/alloff_perf/: energy.txt  log_c-ray.txt  log_dacapo_tradebeans.txt  log_dacapo_tradesoap.txt  log_encode-mp3.txt  log_glmark2_1024x768.txt  log_glmark2_1920x1080.txt  log_glmark2_2560x1440.txt  log_glmark2_800x600.txt  log_j2dbench_all.txt  (+49 more)
scripts/: clover.in  clover.in.tmp  clover.out  downloadData.sh  dump.rdb  execute.sh  results.txt  sendNotification.py  test.sh  time.txt
tasks/nero2d/: AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.cvs  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  libtool  remsymlinks
tasks/nero2d/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
tasks/nero2d/benchmark/: Makefile  Makefile.am  Makefile.in  README  benchlam  benchom  benchsuite  getAvgTime.m  getEfficiency.m  mflam12  mflam16  mflam20  mflam24  mflam4  mflam8  mfom12  mfom16  mfom20  mfom24  mfom4  mfom8  plotEfficiency.m  plotSpeed.m  plotSpeedup.m  standard16DIEL.gbt  standard16DIEL.igf  standard4DIEL.gbt  standard4DIEL.igf  standard9DIEL.gbt  standard9DIEL.igf  standardDIEL.gbt  standardDIEL.igf  standardPEC.gbt  standardPEC.igf
tasks/nero2d/config/: Makefile  Makefile.am  Makefile.in
tasks/nero2d/doc/: Makefile  Makefile.am  Makefile.in  mdate-sh  nero2d.texi  version.texi
tasks/nero2d/examples/: Makefile  Makefile.am  Makefile.in
tasks/nero2d/examples/example1/: Makefile  Makefile.am  Makefile.in  example1.gbt  example1.igf
tasks/nero2d/examples/example2/: Makefile  Makefile.am  Makefile.in  example2.gbt  example2.igf
tasks/nero2d/examples/frqsweep/: Makefile  Makefile.am  Makefile.in  case.gbt  case.igf  sweep
tasks/nero2d/m4/: acx_blas.m4  acx_blas_f77_func.m4  acx_lapack.m4  acx_mpi.m4
tasks/nero2d/src/: Makefile  Makefile.am  Makefile.in  agghandler2d.cpp  agghandler2d.h  base.h  cnfgfile.cpp  cnfgfile.h  excitation.cpp  excitation.h  geometry.cpp  geometry.h  handlman.cpp  handlman.h  helm2d.cpp  helm2d.h  integrations.cpp  integrations.h  inthandler2d.cpp  inthandler2d.h  levelhandler2d.cpp  levelhandler2d.h  mathlib.cpp  mathlib.h  matrix.cpp  matrix.h  medium.cpp  medium.h  nearinthandler2d.cpp  nearinthandler2d.h  nero2d.cpp  nero2d.h  object.cpp  object.h  output.cpp  output.h  scene2d.cpp  scene2d.h  segment.cpp  segment.h  (+4 more)
tasks/nero2d/src/.deps/: agghandler2d.Po  cnfgfile.Po  excitation.Po  geometry.Po  handlman.Po  helm2d.Po  integrations.Po  inthandler2d.Po  levelhandler2d.Po  mathlib.Po  matrix.Po  medium.Po  nearinthandler2d.Po  nero2d.Po  object.Po  output.Po  scene2d.Po  segment.Po  solve.Po  translhandler2d.Po
tasks/nero2d/src/grafix/: Makefile  Makefile.am  Makefile.in  bmp.lo  grafix.cpp  grafix.h  grafix.lo  libgrafix.la
tasks/nero2d/src/grafix/.deps/: bmp.Plo  grafix.Plo
tasks/nero2d/src/grafix/.libs/: libgrafix.la
tasks/nero2d/src/nexus/: Makefile  Makefile.am  Makefile.in  agghandler.h  base.h  box.cpp  box.h  box.lo  boxmemh.cpp  boxmemh.h  boxmemh.lo  defloadh.cpp  defloadh.h  defloadh.lo  engine.cpp  engine.h  engine.lo  intgroup.cpp  intgroup.h  intgroup.lo  intpolhandler.h  iterel.cpp  iterel.h  iterel.lo  level.cpp  level.h  level.lo  leveldata.cpp  leveldata.h  leveldata.lo  levelhandler.cpp  levelhandler.h  levelhandler.lo  libnexus.la  loadhandler.cpp  loadhandler.h  loadhandler.lo  matvec.cpp  matvec.h  matvec.lo  (+27 more)
tasks/nero2d/src/nexus/.deps/: box.Plo  boxmemh.Plo  defloadh.Plo  engine.Plo  intgroup.Plo  iterel.Plo  level.Plo  leveldata.Plo  levelhandler.Plo  loadhandler.Plo  matvec.Plo  message.Plo  nexus.Plo  point.Plo  queue.Plo  subtree.Plo  tree.Plo  util.Plo  workpack.Plo
tasks/nero2d/src/nexus/.libs/: libnexus.la
tasks/nero2d/src/zofpack/: Makefile  Makefile.am  Makefile.in  libzofpack.la
tasks/nero2d/src/zofpack/.libs/: libzofpack.la
tasks/nero2d/src/zofpack/amos/: Makefile  Makefile.am  Makefile.in  README  d1mach.lo  dgamln.lo  i1mach.lo  libamos.la  xzabs.lo  xzexp.lo  xzlog.lo  xzsqrt.lo  zacai.lo  zacon.lo  zairy.lo  zasyi.lo  zbesh.lo  zbesi.lo  zbesj.lo  zbesk.lo  zbesy.lo  zbinu.lo  zbiry.lo  zbknu.lo  zbuni.lo  zbunk.lo  zdiv.lo  zkscl.lo  zmlri.lo  zmlt.lo  zrati.lo  zs1s2.lo  zseri.lo  zshch.lo  zuchk.lo  zunhj.lo  zuni1.lo  zuni2.lo  zunik.lo  zunk1.lo  (+3 more)
tasks/nero2d/src/zofpack/amos/.libs/: libamos.la
tasks/nero2d/src/zofpack/blas/: Makefile  Makefile.am  Makefile.in  README
tasks/nero2d/src/zofpack/lapack/: Makefile  Makefile.am  Makefile.in  README
tasks/nero2d/src/zofpack/machcons/: Makefile  Makefile.am  Makefile.in
tasks/nero2d/src/zofpack/pim/: CHANGES  COPYRIGHT  Makefile  Makefile.am  Makefile.in  README  decode.f  decode.lo  dmachcons.f  dmachcons.lo  dzsetrhsstop.f  dzsetrhsstop.lo  encode.f  encode.lo  givens.f  givens.lo  libpim.la  pimdgetpar.f  pimdgetpar.lo  pimdprtpar.f  pimdprtpar.lo  pimdsetpar.f  pimdsetpar.lo  pimzbicg.f  pimzbicg.lo  pimzbicgstab.f  pimzbicgstab.lo  pimzbicgstab2.f  pimzbicgstab2.lo  pimzcg.f  pimzcg.lo  pimzcgne.f  pimzcgne.lo  pimzcgnr.f  pimzcgnr.lo  pimzcgs.f  pimzcgs.lo  pimzchebyshev.f  pimzchebyshev.lo  pimzqmr.f  (+20 more)
tasks/nero2d/src/zofpack/pim/.libs/: libpim.la
tools/: Bosphorus_Copyright.txt  downloadAndInstallTasks.sh  gccTestDownloadInstall.sh  generateBinaryData.sh  generateHeatMaps.ipynb  generateTaskData.sh  getInputs.sh
(+5304 files in other folders)
