INCLUDES =
METASOURCES = AUTO
benchmarkdir = $(datadir)/benchmark
benchmark_DATA = standard16DIEL.gbt standard16DIEL.igf standard4DIEL.gbt \
	standard4DIEL.igf standard9DIEL.gbt standard9DIEL.igf standardDIEL.gbt \
	standardDIEL.igf standardPEC.gbt standardPEC.igf README getEfficiency.m \
	mflam12 mflam16 mflam20 mflam4 mflam8 mflam24 plotSpeed.m plotSpeedup.m \
	plotEfficiency.m config.dat getAvgTime.m mfom12 mfom16 mfom20 mfom4 \
	mfom8 mfom24
benchmark_SCRIPTS = benchsuite benchlam benchom
