METASOURCES = AUTO
noinst_LTLIBRARIES = libnexus.la

libnexus_la_SOURCES = box.cpp boxmemh.cpp defloadh.cpp engine.cpp intgroup.cpp \
	iterel.cpp level.cpp leveldata.cpp levelhandler.cpp loadhandler.cpp matvec.cpp \
	message.cpp nexus.cpp point.cpp queue.cpp subtree.cpp tree.cpp util.cpp \
	workpack.cpp

noinst_HEADERS = base.h matvec.h nexus.h point.h queue.h util.h agghandler.h \
	translhandler.h levelhandler.h intpolhandler.h nearinthandler.h pubbase.h box.h \
	subtree.h workpack.h iterel.h loadhandler.h level.h defloadh.h message.h engine.h \
	tree.h leveldata.h intgroup.h

CXX=@MPICXX@
