METASOURCES = AUTO
noinst_LTLIBRARIES = libamos.la
libamos_la_SOURCES = d1mach.f dgamln.f i1mach.f xzabs.f xzexp.f xzlog.f xzsqrt.f\
	zacai.f zacon.f zairy.f zasyi.f zbesh.f zbesi.f zbesj.f zbesk.f zbesy.f\
	zbinu.f zbiry.f zbknu.f zbuni.f zbunk.f zdiv.f zkscl.f zmlri.f zmlt.f\
	zrati.f zs1s2.f zseri.f zshch.f zuchk.f zunhj.f zuni1.f zuni2.f zunik.f\
	zunk1.f zunk2.f zuoik.f zwrsk.f
libamos_la_LDFLAGS = -avoid-version
